--- a/_posts/2023-12-27-선형대수학 1강 선형대수학의 기초.md
+++ b/_posts/2023-12-27-선형대수학 1강 선형대수학의 기초.md
@@ -1,3 +1,9 @@
+---
+key:
+title: '선형대수학 1강, 선형대수학의 기본'
+excerpt: '딥러닝을 위해 필요한 내용을 다룹니다.'
+tags: [선형대수학, 딥러닝]
+---
 이 글은 이상엽의 math 선형대수학 강좌와 길버트의 딥러닝을 위한 선형대수학을 참고하여 작성하는 공부한 것을 정리하기 위한 포스트입니다.
 
 # 선형대수학 1강, 선형대수학의 기본
