--- a/_posts/2023-12-27-선형대수학 2강 선형대수학의 물리적 해석.md
+++ b/_posts/2023-12-27-선형대수학 2강 선형대수학의 물리적 해석.md
@@ -1,3 +1,9 @@
+---
+key:
+title: '선형대수학 2강, 물리적 벡터'
+excerpt: '딥러닝을 위해 필요한 내용을 다룹니다.'
+tags: [선형대수학, 딥러닝]
+---
 # 선형대수학 2강, 물리적 벡터
 
 <img src="https://raw.githubusercontent.com/kirity1/blogimages/main/uPic/image-20231227181010885.png" alt="image-20231227181010885" style="zoom:50%;" />
