--- a/_posts/2023-12-27-선형대수학 3강 대수구조.md
+++ b/_posts/2023-12-27-선형대수학 3강 대수구조.md
@@ -1,3 +1,9 @@
+---
+key:
+title: '선형대수학 3강, 벡터공간'
+excerpt: '딥러닝을 위해 필요한 내용을 다룹니다.'
+tags: [선형대수학, 딥러닝, 벡터공간]
+---
 # 선형대수학 3강 벡터공간
 
 우리는 지금까지 선형대수학의 기초를 봤고 이제 수학적으로 정의한 벡터에 대해 다루려고 한다, 그리고 그게 바로 벡터공간이다.
