--- a/_posts/2023-12-28-선형대수학 4강 선형생성.md
+++ b/_posts/2023-12-28-선형대수학 4강 선형생성.md
@@ -4,3 +4,28 @@ title: '선형대수학 4강, 선형생성'
 excerpt: '딥러닝을 위해 필요한 내용을 다룹니다.'
 tags: [선형대수학, 딥러닝, 선형생성]
 ---
+
+
+
+<img src="https://raw.githubusercontent.com/kirity1/blogimages/main/uPic/image-20231228173150707.png" alt="image-20231228173150707" style="zoom: 67%;" />
+
+우리는 이제 앞서 벡터공간이라는 것을 정의했다, 여기서 w는 이 v에 포함되는 부분벡터공간이다, 그냥 말 그대로 이해하면 될 듯 하다.
+
+<img src="https://raw.githubusercontent.com/kirity1/blogimages/main/uPic/image-20231228173206257.png" alt="image-20231228173206257" style="zoom:67%;" />
+
+선형생성이란 말 그대로 사상(함수)을 만들어낸다고 생각하자, 
+
+<img src="https://raw.githubusercontent.com/kirity1/blogimages/main/uPic/image-20231228173215840.png" alt="image-20231228173215840" style="zoom: 67%;" />
+
+<img src="https://raw.githubusercontent.com/kirity1/blogimages/main/uPic/image-20231228173313356.png" alt="image-20231228173313356" style="zoom:67%;" />
+
+<img src="https://raw.githubusercontent.com/kirity1/blogimages/main/uPic/image-20231228173323225.png" alt="image-20231228173323225" style="zoom:67%;" />
+
+<img src="https://raw.githubusercontent.com/kirity1/blogimages/main/uPic/image-20231228173336409.png" alt="image-20231228173336409" style="zoom:67%;" />
+
+<img src="https://raw.githubusercontent.com/kirity1/blogimages/main/uPic/image-20231228173349586.png" alt="image-20231228173349586" style="zoom:67%;" />
+
+<img src="https://raw.githubusercontent.com/kirity1/blogimages/main/uPic/image-20231228173411256.png" alt="image-20231228173411256" style="zoom:67%;" />
+
+<img src="https://raw.githubusercontent.com/kirity1/blogimages/main/uPic/image-20231228173421244.png" alt="image-20231228173421244" style="zoom:67%;" />
+
