--- a/_posts/2023-12-29-선형대수학 5강 정리 1.md
+++ b/_posts/2023-12-29-선형대수학 5강 정리 1.md
@@ -46,7 +46,7 @@ tags: [선형대수학, 딥러닝]
 
 보면 빨강, 파랑, 주황을 좌표에서 difference를 비교한다고 했을 때, 길이가 제각각이면 빨강에서 주황까지와 파랑에서 주황까지의 distance가 normalization하지 않으면 색들이 얼마나 떨어졌는지에 대해 정보가 유의미하지 않다, 그러므로 똑같은 1이라는 크기로 만들어서(normalization) distance를 구한다. 딥러닝할 때 중요한 부분이다.
 
-<img src="../../../../Library/Application Support/typora-user-images/image-20231229155617139.png" alt="image-20231229155617139" style="zoom:67%;" />
+<img src="https://raw.githubusercontent.com/kirity1/blogimages/main/uPic/image-20231229162328660.png" alt="image-20231229162328660" style="zoom:67%;" />
 
 <img src="https://raw.githubusercontent.com/kirity1/blogimages/main/uPic/image-20231229155925212.png" alt="image-20231229155925212" style="zoom:67%;" />
 
