--- a/_posts/2023-12-27-선형대수학 3강 대수구조.md
+++ b/_posts/2023-12-27-선형대수학 3강 대수구조.md
@@ -91,4 +91,21 @@ $(Z,+,\times)$를 정의하자, $(Z,+)$는 아벨군을 만족하고 $(Z,\times)
 
 여기서 이제 1번은 벡터의 덧셈인거고 2번은 스칼라배 이야기인거다.
 
+
+
+<img src="https://raw.githubusercontent.com/kirity1/blogimages/main/uPic/image-20231228173150707.png" alt="image-20231228173150707" style="zoom: 67%;" />
+
+우리는 이제 앞서 벡터공간이라는 것을 정의했다, 여기서 w는 이 벡터공간에 에 포함되는 부분벡터공간이다, 그냥 말 그대로 이해하면 될 듯 하다.
+
+<img src="https://raw.githubusercontent.com/kirity1/blogimages/main/uPic/image-20231228173206257.png" alt="image-20231228173206257" style="zoom:67%;" />
+
+벡터공간에 있는 원소들의 가능한 모든 선형결합으로 만들 수 있는 벡터공간들을 선형생성이라 한다. 예를 들어보자
+$$
+S=[(1,0),(0,1)], \ F=R(실수전체집합)일때 \\
+span(S)=[k(1,0)+m(0,1)\ |\ k,m \in F]\\
+=[(k,m)\ |\ k,m \in F]\\
+=R^2
+$$
+이 식에서의 선형생성의 의미는 2차원 실수벡터공간(유클리드 공간)이 된다, 즉 **S라는 집합은 2차원 실수벡터공간을 만들어 낼 수 있다는 말**이다, S집합은 (1,0),(0,1) 두개의 벡터로 이루어진 집합이였다, 이 두 벡터는 2차원 실수벡터공간을 만들어내는데 있어서 근본적인 역할을 할 수 있다. 이 두 벡터로 안에 있는 모든 원소들을 선형결합할 수 있기 때문이다.
+
 이번에 배운 내용들은 벡터공간이라는 것에 대한 수학적인 정의이다, 우리가 딥러닝을 하고자 할 때는 필요없을지도 모르지만 이런 기초를 다지는 것 또한 중요한 부분이라 생각한다.
