--- a/_posts/20204-1-4-선형대수학 11강 선형독립.md
+++ b/_posts/20204-1-4-선형대수학 11강 선형독립.md
@@ -1,6 +1,6 @@
 ---
 key:
-title: '선형대수학 11강 non Homogeneous underconstrained linear system equations and Echelon matrix'
+title: '선형대수학 12강 선형독립'
 excerpt: '딥러닝을 위해 필요한 내용을 다룹니다.'
 tags: [선형대수학]
 
