--- a/_posts/20204-1-4-선형대수학 11강 선형독립.md
+++ b/_posts/20204-1-4-선형대수학 11강 선형독립.md
@@ -1,6 +1,6 @@
 ---
 key:
-title: '선형대수학 12강 선형독립'
+title: '선형대수학 11강 선형독립과 기저 벡터'
 excerpt: '딥러닝을 위해 필요한 내용을 다룹니다.'
 tags: [선형대수학]
 
@@ -12,3 +12,38 @@ tags: [선형대수학]
 
 ---
 
+<img src="https://raw.githubusercontent.com/kirity1/blogimages/main/uPic/image-20240102002822514.png" alt="image-20240102002822514" style="zoom:67%;" />
+
+선형독립은 영벡터로 만들고자 할 때 각 c값들이 스칼라값 0이여만 할때 이 벡터의 집합을 선형독립이라 한다, 이 때 각각의 원소들 하나와 하나가 독립이어야한다는 말은 아니다. 어차피 상수배가 아니면(직선 상에 있는게 아니면) 독립이기 때문이다.
+
+<img src="https://raw.githubusercontent.com/kirity1/blogimages/main/uPic/image-20240102003717599.png" alt="image-20240102003717599" style="zoom:67%;" />
+
+<img src="https://raw.githubusercontent.com/kirity1/blogimages/main/uPic/image-20240102004622722.png" alt="image-20240102004622722" style="zoom:67%;" />
+
+x,y,z공간 상에 평면이 있다고 해보자, 이 평면은 원점을 지나기 때문에 서브벡터스페이스를 가지고 있다, 이 때 이 평면위에 있는 임의의 벡터 3개를 골라보자, 그림에서 보듯이 두개는 1번과 2번, 2번과 3번, 3번과 1번 어떻게 조합하든 선형독립이 성립된다, 하지만 3개를 가지고 선형독립을 따져보면 선형결합으로 표현이 가능하므로 선형종속이다, 어떤걸 가져와도 이런 결과가 나온다, 왜 이럴까? 그건 당연히 **평면상에서 벡터들을 골라 왔기 때문에 커버하는 차원이 2개이기 때문이다, 그렇기 때문에 선형독립은 그 벡터의 수만큼 차원을 커버하는 것**이다. 평면에 있는 두 벡터[1,1,-2]와 [2,0,-2]는 x+y+z=0 위의 모든 벡터를 모두 표현 할 수가 있다는말인거다. 
+
+<img src="https://raw.githubusercontent.com/kirity1/blogimages/main/uPic/image-20240102004924743.png" alt="image-20240102004924743" style="zoom:67%;" />
+
+선형독립인지 체크하는거는 가우스소거법 이용하면 된다, 그래서 non-zero 피봇의 개수만큼이 선형독립 벡터집합의 벡터의 수인거다.(해당 피봇이 있는 열 벡터는 독립인 벡터다라고 오해하면 안됀다. 선형독립의 개념은 여러개의 벡터가 서로가 독립인지를 따지는거지 그 자체의 성질을 말하는게 아니다.)
+
+<img src="https://raw.githubusercontent.com/kirity1/blogimages/main/uPic/image-20240102005250893.png" alt="image-20240102005250893" style="zoom:67%;" />
+
+<img src="https://raw.githubusercontent.com/kirity1/blogimages/main/uPic/image-20240102005649587.png" alt="image-20240102005649587" style="zoom:67%;" />
+
+<img src="https://raw.githubusercontent.com/kirity1/blogimages/main/uPic/image-20240102005739499.png" alt="image-20240102005739499" style="zoom:67%;" />
+
+<img src="https://raw.githubusercontent.com/kirity1/blogimages/main/uPic/image-20240102014713137.png" alt="image-20240102014713137" style="zoom:67%;" />
+
+이 때 span하는 벡터들을 기저,basis라 한다.
+
+![image-20240102015224375](https://raw.githubusercontent.com/kirity1/blogimages/main/uPic/image-20240102015224375.png)
+
+<img src="https://raw.githubusercontent.com/kirity1/blogimages/main/uPic/image-20240102015650164.png" alt="image-20240102015650164" style="zoom:67%;" />
+
+<img src="https://raw.githubusercontent.com/kirity1/blogimages/main/uPic/image-20240102020115276.png" alt="image-20240102020115276" style="zoom:67%;" />
+
+원래 행렬과 그것을 upper triangular로 만들기 위해 가우스소거법을 거친 행렬은 그 기저벡터가 달라진다는 말이다.
+
+<img src="https://raw.githubusercontent.com/kirity1/blogimages/main/uPic/image-20240102020308808.png" alt="image-20240102020308808" style="zoom:67%;" />
+
+벡터의 차원이 아니라 **벡터공간**의 차원이라는 것에 유의하자.
