--- a/_posts/2023-12-25-선형대수학 1강 선형대수학의 기초.md
+++ b/_posts/2023-12-25-선형대수학 1강 선형대수학의 기초.md
@@ -30,4 +30,4 @@ tags: [선형대수학]
 
 
 
-이번엔 정의에 관련한 내용들 뿐이므로 딱히 코멘트할 부분은 없다, 그러니 그냥 외우면 될 듯 하다.
+이번엔 정의에 관련한 내용들 뿐이므로 딱히 코멘트할 부분은 없다, 그러니 그냥 외우면 될 듯 하다.<img src="https://raw.githubusercontent.com/kirity1/kirity1.github.io/master/uPic/%E1%84%89%E1%85%B3%E1%84%8F%E1%85%B3%E1%84%85%E1%85%B5%E1%86%AB%E1%84%89%E1%85%A3%E1%86%BA%202024-01-13%20%E1%84%8B%E1%85%A9%E1%84%8C%E1%85%A5%E1%86%AB%208.38.52.png" alt="스크린샷 2024-01-13 오전 8.38.52" style="zoom:67%;" />
