--- a/_posts/2024-5-28-이진화와 오츄 알고리즘.md
+++ b/_posts/2024-5-28-이진화와 오츄 알고리즘.md
@@ -58,3 +58,88 @@ plot_img(images, titles)
 ![image-20240527141004252](https://raw.githubusercontent.com/kirity1/blogimg/master/uPic/image-20240527141004252.png)
 
 오른 쪽이 Binary Image로 오리지널과 비교해보면 회색같은 애매한 색이 검은색 혹은 흰색으로 나누어진걸 뒤에 있는 텍스트에서 볼 수 있다.
+
+# 오츄 알고리즘
+
+이진화는 T의 값을 기준으로 나눈다고 하였는데, 우리가 사진을 얻고 그걸 이진화 할 때 만약 그 흑 0, 백 255를 기준으로 이미지가 있다고 할 때 어디에 T값을 둘건지에 대한 것과 일일히 T값을 입력해야한다는 문제가 있다, 그래서 이걸 알아서 구하는 코드를 구현하는게 오츄 알고리즘이다
+
+![image-20240528221449686](https://raw.githubusercontent.com/kirity1/blogimg/master/uPic/image-20240528221449686.png)
+
+T를 구하는 과정을 생각해보면, T값을 중심으로 2개의 섹션을 나눠서 u는 각 섹션의 픽셀의 평균을, v는 각 섹션의 픽셀의 분산을 나타낸다, 그래서 그 분산의 값과 평균의 값을 곱한걸 더한게 가장 큰, 가장 좋은 T를 최종 임계값으로 하고자 하는거다. 각 섹션의 픽셀들의 명암 분포가 균일할수록, 적절하게 T를 중간에 넣었다는 말이기 때문이다, 그래서 분포값을 고려하는거다.
+
+![image-20240528222111961](https://raw.githubusercontent.com/kirity1/blogimg/master/uPic/image-20240528222111961.png)
+
+즉 이 히스토그램을 보면, 100언저리에 있는 픽셀들은 배경이고 가운데 직사각형 물체는 150의 값을 가짐을 알 수 있는데, 여기서 T의 값을 100과 150사이에 자리잡게 해야 이진화가 오른쪽처럼 된다, 그리고 그걸 위해 분산의 개념을 가져온거다.
+
+```python
+img2 = cv2.imread('pre_otsus_algorithm.jpg', 0)
+plt.imshow(img2, cmap='gray')
+plt.show()
+height, width = img2.shape
+print(height, width)
+hist = cv2.calcHist([img2], [0], None, [256], [0, 256])
+hist_norm = hist.ravel() / hist.max()
+CDF = hist_norm.cumsum()
+
+#initialization
+bins = np.arange(256)
+fn_min = np.inf
+thresh = -1
+
+#Otsu's algorithm
+for i in range(1,256):
+    p1, p2 = np.hsplit(hist_norm, [i]) # probabilities
+    q1, q2 = CDF[i], CDF[255]-CDF[i] # cum sum of classes
+    
+    if q1 == 0:
+        q1 = 0.0000001
+    if q2 == 0:
+        q2 = 0.0000001
+    b1, b2 = np.hsplit(bins, [i]) # weights
+    # finding means and variances
+    m1, m2 = np.sum(p1*b1)/q1, np.sum(p2*b2)/q2
+    v1, v2 = np.sum(((b1-m1)**2)*p1)/q1, np.sum(((b2-m2)**2)*p2)/q2
+    # calculates the minimization function
+    fn = v1*q1 + v2*q2
+    if fn < fn_min:
+        fn_min = fn
+        thresh = i
+thresh
+
+otsu_img = np.zeros(img2.shape, np.uint8)
+
+for i in range(img2.shape[0]):
+    for j in range(img2.shape[1]):
+        if img2[i,j]<thresh:
+            otsu_img[i,j] = 0
+        else:
+            otsu_img[i,j] = 255
+            
+images = [img2, otsu_img]
+titles = ['Original Image', 'Otsu Image']
+plot_img(images, titles)
+
+```
+
+- `for i in range(1, 256)`: 가능한 모든 임계값을 순회합니다.
+- `p1, p2 = np.hsplit(hist_norm, [i])`: 현재 임계값 `i`를 기준으로 히스토그램을 두 개의 부분으로 분할합니다.
+- `q1, q2 = CDF[i], CDF[255] - CDF[i]`: 두 부분의 누적 합을 계산합니다.
+- `if q1 == 0: q1 = 0.0000001`: 누적 합이 0인 경우를 방지하기 위해 작은 값을 더합니다.
+- `b1, b2 = np.hsplit(bins, [i])`: 동일한 위치에서 `bins` 배열을 분할합니다.
+- `m1, m2`: 두 부분의 평균을 계산합니다.
+- `v1, v2`: 두 부분의 분산을 계산합니다.
+- `fn = v1 * q1 + v2 * q2`: 최소화할 함수 값을 계산합니다.
+- `if fn < fn_min`: 현재 함수 값이 최소 함수 값보다 작으면 갱신합니다.
+
+![image-20240528220412476](https://raw.githubusercontent.com/kirity1/blogimg/master/uPic/image-20240528220412476.png)
+
+T의 값으로 153이 나온다.
+
+```py
+ret, img_binary2 = cv2.threshold(img2, 0, 255, cv2.THRESH_BINARY+cv2.THRESH_OTSU)
+print( " {} {}".format(ret, thresh))
+```
+
+이렇게 미리 opencv라이브러리에 있는 메소드를 통해 쉽게 구현 할 수 있다.
+
+코드 출처:https://100s.tistory.com/48 , copliot의 코드
