--- a/_posts/2024-5-28-이진화와 오츄 알고리즘.md
+++ b/_posts/2024-5-28-이진화와 오츄 알고리즘.md
@@ -1,7 +1,7 @@
 ---
 key:
-title: '이진화와 오츄알고리즘을 이해하기'
-excerpt: '이진화와 오츄알고리즘'
+title: '이진화와 오츄알고리즘'
+excerpt: '이진화와 오츄알고리즘을 이해하기'
 tags: [컴퓨터비전]
 ---
 
