--- a/_posts/2024-5-31-리덕스툴킷.md
+++ b/_posts/2024-5-31-리덕스툴킷.md
@@ -5,6 +5,8 @@ excerpt: '리엑트 리덕스'
 tags: [리엑트], [리덕스]
 ---
 
+## 리덕스 툴킷 
+
 ```javascript
 // ./store/index.js
 import { createStore } from "redux";
