--- a/_posts/2024-5-30-리엑트리덕스.md
+++ b/_posts/2024-5-30-리엑트리덕스.md
@@ -1,9 +1,12 @@
 ---
+
 key:
 title: '리엑트 리덕스의 리턴값'
 excerpt: '리엑트 리덕스'
 tags: [리엑트], [리덕스]
 ---
+
+## 리덕스의 리턴값에 대하여
 
 ```javascript
 import { createStore } from "redux";
