--- a/_posts/2024-5-31-리덕스툴킷.md
+++ b/_posts/2024-5-31-리덕스툴킷.md
@@ -1,8 +1,8 @@
 ---
 key:
-title: '리엑트 리덕스의 리턴값'
+title: '리엑트 툴킷 사용법'
 excerpt: '리엑트 리덕스'
-tags: [리엑트], [리덕스]
+tags: [react], [react-redux]
 ---
 
 ## 리덕스 툴킷 
