--- a/_posts/2024-7-19-css 공부 모음.md
+++ b/_posts/2024-7-19-css 공부 모음.md
@@ -57,3 +57,6 @@ html {
 
 **min-height**: 최소 높이를 80rem으로 설정합니다.
 
+## paddig과 margin의 차이
+
+padding은 그 컨텐츠의 속성들을 따라간다, 즉 그 컨텐츠의 backgrond나 그러한 속성들을 다 받고 그 컨텐츠 안에 포함되는 가장자리라고 생각할 수 있고 margin은 그러한 속성들을 안 받는다고 생각하면 될 듯 하다.
