--- a/_posts/2024-7-20-리엑트 공부 모음.md
+++ b/_posts/2024-7-20-리엑트 공부 모음.md
@@ -6,6 +6,7 @@ tags: [react]
 ---
 
 ```jsx
+
 import React from 'react'
 
 function CoreConcepts(props) {
@@ -79,5 +80,64 @@ export const CORE_CONCEPTS = [
 ];
 ```
 
+## Mapping
+
 이 props를 이용하여 컴포넌트에 다른 데이터들을 띄어놓고 싶다면 App 컴포넌트에 CoreConcepts컴포넌트를 띄우면 되는데 이떄 일일히 props속성을 해당 값에 지정하기 귀찮기 때문에 map메소들을 이용하여 CORE 저부분을 이용해서 컴포넌트에 인자들을 전달시킬 수 있다.
+
+## 양방향 바인딩과 객체형태로 state업데이트
+
+
+
+```jsx
+import React, { useState } from "react";
+
+function UserInput({ userData }) {
+  const [userData, setUserData] = useState({
+    initialInvestment: 10000,
+    annualInvestment: 1200,
+    expectedReturn: 6,
+    duration: 10,
+  });
+
+  function handleinput(indentifier, newvalue) {
+    setUserData(prevInput => {
+        return {
+            ...prevInput,
+            [indentifier]: newvalue
+        }
+    })
+  }
+
+  return (
+    <section id="user-input">
+      <div className="input-group">
+        <p>
+          <label>initial investment</label>
+          <input type="number" required onChange={() => handleinput('initialInvestment', event.target.value)} value={userData.initialInvestment} />
+        </p>
+        <p>
+          <label>annual Investment</label>
+          <input type="number" required onChange={() => handleinput('annualInvestment', event.target.value)} value={userData.annualInvestment} />
+        </p>
+      </div4234879437894244422434
+
+      <div className="input-group">
+      <p>
+          <label>expected Return</label>
+          <input type="number" required onChange={() => handleinput('expectedReturn', event.target.value)} value={userData.expectedReturn} />
+        </p>
+        <p34
+          <label>duration</label>
+          <input type="number" required onChange={() => handleinput('duration', event.target.value)} value={userData.duration} />
+        </p>
+      </div>
+    </section>
+  );
+}
+
+export default UserInput;
+
+```
+
+이렇게 기존 객체에다가 불변성을 지키면서 업데이트하는 식으로 하면 됀다. 
 
