--- a/_posts/2024-11-21-swift 공부.md
+++ b/_posts/2024-11-21-swift 공부.md
@@ -1,349 +1,649 @@
 ---
 key:
-title: 'whisky 코드를 파헤쳐서 swift를 공부해보자'
+title: 'whisky 코드를 파헤쳐서 swift를 공부해보자-3'
 excerpt: 'swift 정리합니다.'
 tags: [swift]
 ---
 
 ```swift
-    var body: some Scene {
-        WindowGroup {
-            ContentView(showSetup: $showSetup)
-                .frame(minWidth: ViewWidth.large, minHeight: 316)
-                .environmentObject(BottleVM.shared)
-                .onAppear {
-                    NSWindow.allowsAutomaticWindowTabbing = false
-
-                    Task.detached {
-                        await WhiskyApp.deleteOldLogs()
+.handlesExternalEvents(matching: ["{same path of URL?}"])
+        .commands {
+            CommandGroup(after: .appInfo) {
+                SparkleView(updater: updaterController.updater)
+            }
+            CommandGroup(before: .systemServices) {
+                Divider()
+                Button("open.setup") {
+                    showSetup = true
+                }
+                Button("install.cli") {
+                    Task {
+                        await WhiskyCmd.install()
                     }
                 }
+            }
+            CommandGroup(replacing: .newItem) {}
+            CommandGroup(after: .newItem) {
+                Button("open.bottle") {
+                    let panel = NSOpenPanel()
+                    panel.canChooseFiles = false
+                    panel.canChooseDirectories = true
+                    panel.allowsMultipleSelection = false
+                    panel.canCreateDirectories = false
+                    panel.begin { result in
+                        if result == .OK {
+                            if let url = panel.urls.first {
+                                BottleVM.shared.bottlesList.paths.append(url)
+                                BottleVM.shared.loadBottles()
+                            }
+                        }
+                    }
+                }
+                .keyboardShortcut("I", modifiers: [.command])
+            }
+            CommandGroup(after: .importExport) {
+                Button("open.logs") {
+                    WhiskyApp.openLogsFolder()
+                }
+                .keyboardShortcut("L", modifiers: [.command])
+                Button("kill.bottles") {
+                    WhiskyApp.killBottles()
+                }
+                .keyboardShortcut("K", modifiers: [.command, .shift])
+                Button("wine.clearShaderCaches") {
+                    WhiskyApp.killBottles() // Better not make things more complicated for ourselves
+                    WhiskyApp.wipeShaderCaches()
+                }
+            }
+            CommandGroup(replacing: .help) {
+                Button("help.website") {
+                    if let url = URL(string: "https://getwhisky.app/") {
+                        openURL(url)
+                    }
+                }
+                Button("help.github") {
+                    if let url = URL(string: "https://github.com/Whisky-App/Whisky") {
+                        openURL(url)
+                    }
+                }
+                Button("help.discord") {
+                    if let url = URL(string: "https://discord.gg/CsqAfs9CnM") {
+                        openURL(url)
+                    }
+                }
+            }
+        }
+        Settings {
+            SettingsView()
         }
 ```
 
-## windowGroup: macOS 앱에서 창을 만들 때 사용하는 기본 컨테이너
+.handlesExternalEvents(matching: ["{same path of URL?}"])
 
-여러 창을 동시에 열 수 있게 해주는 그룹 단위
+앱 외부에서 들어오는 이벤트(파일열기같은거)를 처리하는 부분
 
-웹 브라우저의 새 창 개념과 비슷합니다
+## 메뉴 그룹
 
-새 창을 열 때 (⌘ + N)
+### 앱 업데이트
 
-각 창은 독립적이지만 같은 구조를 가짐
-
-주소창, 탭바, 컨텐츠 영역 등이 모든 창에 동일하게 존재
-
-```swift
-// 사파리 브라우저와 비슷한 구조의 예시 코드
-WindowGroup {
-    BrowserView(url: $currentURL)  // 각 창의 기본 구조
-        .toolbar {                 // 상단 도구 모음
-            TextField("URL", text: $currentURL)
-            Button("새로고침") { /* ... */ }
-        }
-        .frame(minWidth: 800, minHeight: 600)
-}
-```
-
-즉 새로운 창을 만들때 같은 레이아웃을 공유한다는 의미
-
-## ContentView: 앱의 메인 화면을 구성하는 뷰
-
-showSetup: 설정 화면을 보여줄지 말지 결정하는 상태 변수
-
-$ 기호: 상태 바인딩을 의미
-
-상태 바인딩이란? 데이터의 변경을 자동으로 UI에 반영하는 기능
-
-예: 설정 버튼을 누르면 showSetup이 true가 되고, UI가 자동으로 업데이트됨
-
-## 프레임 설정.frame(minWidth: ViewWidth.large, minHeight: 316)- 창의 최소 크기를 지정
-
-ViewWidth.large: 미리 정의된 표준 창 너비
-
-minHeight: 316: 최소 높이를 316 픽셀로 설정
-
-## environmentObject: 앱 전체에서 공유할 데이터를 설정
-
-```swift
-// 1. 데이터 모델 정의
-class UserSettings: ObservableObject {
-    @Published var isDarkMode: Bool = false
-    @Published var fontSize: Int = 12
+CommandGroup(after: .appInfo) {
+    SparkleView(updater: updaterController.updater)
 }
 
-// 2. 앱에 데이터 주입
-WindowGroup {
-    ContentView()
-        .environmentObject(UserSettings())
-}
+앱 업데이트 기능(Sparkle)를 앱 정보 메뉴 다음에 추가
 
-// 3. 화면에서 데이터 사용
-struct SettingsView: View {
-    @EnvironmentObject var settings: UserSettings
-    
-    var body: some View {
-        Toggle("다크 모드", isOn: $settings.isDarkMode)
+### 시스템 서비스 메뉴
+
+CommandGroup(before: .systemServices) {
+    Divider()  // 구분선
+    Button("open.setup") { showSetup = true }  // 설정 열기
+    Button("install.cli") {  // CLI 도구 설치
+        Task { await WhiskyCmd.install() }
     }
 }
-```
 
-이런 느낌으로, 같은 데이터를 공유하는 코드들을 다룰때, 저걸 사용하면 되는 듯 하다.
-
-### class: 참조 타입의 데이터 구조를 만듦
-
-ObservableObject: 데이터 변경을 감지할 수 있는 프로토콜
-
-쉽게 말해 "이 데이터가 변하면 UI도 같이 업데이트 해줘"라는 의미
-
-### @Published: 이 변수가 변경되면 UI를 업데이트하라는 표시
-
-그러면 여기서 쓰인건?
+새 항목 메뉴
 
 ```swift
-WindowGroup {
-    ContentView()
-        .environmentObject(BottleVM.shared)  // Wine 병 관리 데이터 공유
-}
+CommandGroup(replacing: .newItem) {}
 
-// 병 목록 화면
-struct BottleListView: View {
-    @EnvironmentObject var bottleVM: BottleVM  // 공유 데이터 사용
-    
-    var body: some View {
-        List(bottleVM.bottles) { bottle in
-            Text(bottle.name)
-            Button("실행") {
-                bottleVM.runBottle(bottle)  // 병 실행
+// 새로운 "새로 만들기" 메뉴 항목 추가
+CommandGroup(after: .newItem) {
+    Button("open.bottle") {  // "병 열기" 버튼
+        // macOS의 파일/폴더 선택 다이얼로그 생성
+        let panel = NSOpenPanel()
+        // 파일 선택 불가능 - 폴더만 선택 가능
+        panel.canChooseFiles = false
+        // 폴더 선택 가능
+        panel.canChooseDirectories = true
+        // 다중 선택 불가능 - 한 번에 하나의 폴더만
+        panel.allowsMultipleSelection = false
+        // 새 폴더 생성 불가능
+        panel.canCreateDirectories = false
+        
+        // 다이얼로그 표시 및 결과 처리
+        panel.begin { result in
+            if result == .OK {  // 사용자가 폴더를 선택하고 OK를 눌렀을 때
+                if let url = panel.urls.first {  // 선택된 첫 번째 URL 가져오기
+                    // 선택된 폴더를 병 목록에 추가
+                    BottleVM.shared.bottlesList.paths.append(url)
+                    // 병 목록 새로고침
+                    BottleVM.shared.loadBottles()
+                }
             }
         }
     }
+    // Command + I 단축키 설정
+    .keyboardShortcut("I", modifiers: [.command])
+```
+
+새 wine bottle를 열기 위한 파일 선택 다이얼로그
+
+디렉토리(폴더)만 선택 가능
+
+선택된 병을 bottleVM에 추가
+
+
+
+### 가져오기,내보내기 메뉴 추가
+
+Button("open.logs") {  // 로그 폴더 열기
+    WhiskyApp.openLogsFolder()
+}
+.keyboardShortcut("L", modifiers: [.command])  // ⌘L
+
+Button("kill.bottles") {  // 모든 병 프로세스 종료
+    WhiskyApp.killBottles()
+}
+.keyboardShortcut("K", modifiers: [.command, .shift])  // ⌘⇧K
+
+Button("wine.clearShaderCaches") {  // 셰이더 캐시 정리
+    WhiskyApp.killBottles()
+    WhiskyApp.wipeShaderCaches()
 }
 
-// 설정 화면
-struct SettingsView: View {
-    @EnvironmentObject var bottleVM: BottleVM  // 같은 데이터 사용
-    
-    var body: some View {
-        List {
-            Toggle("자동 실행", isOn: $bottleVM.autoRun)
-            // 다른 설정들...
+### 도움말 메뉴
+
+Button("help.website") {
+    if let url = URL(string: "https://getwhisky.app/") {
+        openURL(url)
+    }
+}
+Button("help.github") {
+    if let url = URL(string: "https://github.com/Whisky-App/Whisky") {
+        openURL(url)
+    }
+}
+Button("help.discord") {
+    if let url = URL(string: "https://discord.gg/CsqAfs9CnM") {
+        openURL(url)
+    }
+}
+
+## 설정 화면
+
+Settings {
+    SettingsView()
+}
+
+### macOS의 표준 설정 창 구현
+
+이 구조는 macOS의 표준 메뉴 구조를 따르면서, Wine 병 관리에 필요한 특수 기능들을 추가로 제공합니다. 각 기능은 키보드 단축키와 함께 제공되어 사용자 편의성을 높였습니다.
+
+```swift
+static func killBottles() {
+        for bottle in BottleVM.shared.bottles {
+            do {
+                try Wine.killBottle(bottle: bottle)
+            } catch {
+                print("Failed to kill bottle: \(error)")
+            }
         }
     }
-}
-```
 
-
-
-## BottleVM (Bottle ViewModel)
-
-BottleVM은 Wine 병(Bottle)들을 관리하는 뷰모델입니다. 뷰모델은 UI(View)와 데이터(Model) 사이를 연결해주는 역할을 합니다.
-
-```swift
-class BottleVM: ObservableObject {
-    // 싱글톤 인스턴스
-    static let shared = BottleVM()
-    
-    // 병 목록을 저장하는 배열
-    @Published var bottles: [Bottle] = []
-    
-    // 병 설정값들
-    @Published var settings: BottleSettings = BottleSettings()
-    
-    // private init으로 외부에서 새로운 인스턴스 생성 방지
-    private init() {
-        loadBottles()  // 초기화할 때 병 목록 불러오기
+    static func openLogsFolder() {
+        NSWorkspace.shared.selectFile(nil, inFileViewerRootedAtPath: Wine.logsFolder.path)
     }
-    
-    // 병 관리 메서드들
-    func loadBottles() {
-        // 병 목록 불러오기
-    }
-    
-    func addBottle(_ bottle: Bottle) {
-        bottles.append(bottle)
-    }
-    
-    func removeBottle(_ bottle: Bottle) {
-        // 병 제거 로직
-    }
-}
-```
 
-shared: 싱글톤 패턴으로, 앱 전체에서 하나의 인스턴스만 사용
+    static func deleteOldLogs() {
+        let pastDate = Date().addingTimeInterval(-7 * 24 * 60 * 60)
 
-## 싱글톤 패턴 (Singleton Pattern)
-
-싱글톤은 앱 전체에서 단 하나의 인스턴스만 존재하도록 보장하는 디자인 패턴
-
-
-
-```swift
-class MySingleton {
-    // 1. static 프로퍼티로 공유 인스턴스 생성
-    static let shared = MySingleton()
-    
-    // 2. private init으로 외부에서 새로운 인스턴스 생성 방지
-    private init() {}
-    
-    // 3. 싱글톤에서 관리할 데이터와 메서드들
-    var data: String = ""
-    
-    func doSomething() {
-        print("작업 수행")
-    }
-}
-
-// 잘못된 사용 (컴파일 에러)
-let instance = MySingleton()  // ❌ private init() 때문에 불가능
-
-// 올바른 사용
-let shared = MySingleton.shared  // ✅ 공유 인스턴스 사용
-shared.data = "새로운 데이터"
-shared.doSomething()
-```
-
-```swift
-// 앱의 모든 화면에서 설정값 공유
-struct SettingsView: View {
-    @EnvironmentObject var bottleVM: BottleVM
-    
-    var body: some View {
-        List {
-            // 모든 화면에서 같은 설정값 사용
-            Toggle("자동 실행", isOn: $bottleVM.autoRun)
-            Slider("성능", value: $bottleVM.performance)
+        guard let urls = try? FileManager.default.contentsOfDirectory(
+            at: Wine.logsFolder,
+            includingPropertiesForKeys: [.creationDateKey]) else {
+            return
         }
-    }
-}
 
-// 다른 화면에서도 같은 설정 사용
-struct BottleView: View {
-    @EnvironmentObject var bottleVM: BottleVM
-    
-    var body: some View {
-        if bottleVM.autoRun {
-            Text("자동 실행 활성화됨")
+        let logs = urls.filter { url in
+            url.pathExtension == "log"
         }
-    }
-}
+
+        let oldLogs = logs.filter { url in
+            do {
+                let resourceValues = try url.resourceValues(forKeys: [.creationDateKey])
+
+                return resourceValues.creationDate ?? Date() < pastDate
+            } catch {
+                return false
+            }
+        }
 ```
 
-### 사용 이유:
+static *func* deleteOldLogs() {}
 
-1. 데이터 일관성
+### - 7일이 지난 로그 파일들을 자동으로 삭제하는 기능
 
-모든 화면에서 같은 Wine 병 목록을 봐야 함
+시스템 정리를 위해 오래된 로그를 자동으로 관리
 
-한 화면에서 병을 추가/삭제하면 모든 화면에 반영되어야 함
+static func killbottles () {}
 
-리소스 관리
+### 실행 중인 모든 Wine 프로세스(bottle)를 종료하는 기능
 
-Wine 병 설정은 시스템 리소스를 사용
+Windows 프로그램이 응답하지 않을 때 사용하는 긴급 중지 기능
 
-여러 관리자가 있으면 리소스 충돌 가능성
+시스템 자원을 정리할 때 유용
 
-상태 동기화
 
-실행 중인 Wine 병의 상태를 한 곳에서 관리
 
-여러 화면에서 동일한 상태 정보 필요
 
-### 장점:
 
-BottleVM.shared로 어디서나 접근 가능
+static *func* wipeShaderCaches() {}
 
-데이터 전달을 위한 복잡한 코드 불필요
+### 그래픽 성능 향상을 위해 저장된 쉐이더 캐시를 정리하는 기능
 
-하나의 인스턴스만 생성
+## 1. 시스템 캐시 디렉토리 찾기
 
-중복 데이터 없음
+getconf: macOS의 시스템 설정값을 읽어오는 명령어
 
-모든 화면이 같은 데이터 소스 사용
+DARWIN_USER_CACHE_DIR: 사용자별 캐시 디렉토리 경로를 가져오는 명령어
 
-실시간 업데이트 용이
+Process(): 외부 프로그램을 실행하기 위한 Swift의 클래스
 
-### 단점:
+Pipe(): 프로그램의 출력을 받아오기 위한 파이프 생성
 
-전역 상태로 인해 단위 테스트가 어려울 수 있음
+## 2. 캐시 데이터 읽기 및 처리
 
-코드 간의 의존 관계가 명시적이지 않음
+fileHandleForReading: 프로그램 출력을 읽기 위한 파일 핸들
 
-인스턴스를 교체하거나 수정하기 어려움
+d3dm: DirectX 쉐이더 캐시가 저장되는 디렉토리
 
-## 싱글톤이란? 어플리케이션 전체에서 단 하나만 존재하는 객체
+trimmingCharacters: 경로 문자열의 앞뒤 공백 제거
 
-```swift
-final class BottleVM: ObservableObject, @unchecked Sendable {
-    @MainActor static let shared = BottleVM()
+## 3. 캐시 삭제
 
-    var bottlesList = BottleData()
-    @Published var bottles: [Bottle] = []
+FileManager: 파일 시스템 작업을 담당하는 클래스
 
-    @MainActor
-    func loadBottles() {
-        bottles = bottlesList.loadBottles()
-    }
-    // ... 나머지 코드
+removeItem: 지정된 경로의 파일/디렉토리 삭제
+
+### 캐시 삭제가 필요한 상황
+
+게임에서 그래픽 깨짐 현상이 발생할 때
+
+프로그램의 성능이 이유 없이 저하될 때
+
+DirectX 관련 오류가 발생할 때
+
+### 작동 순서
+
+macOS의 캐시 디렉토리 위치를 확인
+
+DirectX 쉐이더 캐시 폴더(d3dm)를 찾음
+
+해당 폴더의 내용을 안전하게 삭제
+
+이부분 설명, swift를 잘 모르고, wine도 잘 모른다는 가정, 블로그에 글 올리기 위한 느낌으로
+
+네, WhiskyApp.swift 파일의 주요 기능들을 설명해드리겠습니다.
+
+# Whisky 앱의 핵심 기능 분석
+
+## 1. 앱의 기본 구조
+
+이 앱은 macOS에서 Windows 프로그램을 실행할 수 있게 해주는 Wine을 래핑한 애플리케이션입니다.
+
+## 2. 주요 기능들
+
+### 로그 관리 기능WhiskyApp.swift1/14- 7일이 지난 로그 파일들을 자동으로 삭제하는 기능
+
+시스템 정리를 위해 오래된 로그를 자동으로 관리
+
+### Wine 프로세스 관리WhiskyApp.swift2/14- 실행 중인 모든 Wine 프로세스(bottle)를 종료하는 기능
+
+시스템 자원을 정리할 때 유용
+
+### 쉐이더 캐시 관리WhiskyApp.swift3/14- 그래픽 성능 향상을 위해 저장된 쉐이더 캐시를 정리하는 기능
+
+게임이나 그래픽 앱의 문제 해결에 도움될 수 있음
+
+## 3. 사용자 인터페이스
+
+메뉴바를 통해 다양한 기능에 접근 가능
+
+단축키 지원 (예: Cmd+I로 bottle 열기)
+
+자동 업데이트 기능 내장
+
+설정 창과 도움말 제공
+
+## 4. 특이사항
+
+Sparkle 프레임워크를 사용한 자동 업데이트 시스템
+
+SwiftUI를 사용한 모던한 UI 구현
+
+GPL 라이선스로 배포되는 오픈소스 프로젝트
+
+이 앱은 macOS에서 Windows 프로그램을 실행하는 데 필요한 다양한 관리 기능을 제공하며, 사용자 친화적인 인터페이스를 통해 복잡한 Wine 환경을 쉽게 관리할 수 있게 해줍니다.
+
+Checkpoint 1 saved.checkout
+
+WhiskyApp.swift
+
+WhiskyApp.swift (122-166)
+
+이 코드들 더 자세히 설명해봐
+
+# Wine 애플리케이션의 핵심 관리 기능 상세 분석
+
+## 1. 로그 관리 시스템 (deleteOldLogs)WhiskyApp.swift4/14- Wine.logsFolder: Wine 프로그램이 생성하는 로그 파일들이 저장되는 폴더
+
+creationDateKey: 각 파일의 생성 날짜 정보를 가져오기 위한 키
+
+7일이 지난 파일들을 자동으로 정리하여 디스크 공간 관리
+
+WhiskyApp.swift
+
+5/14
+
+\- 첫 번째 필터: .log 확장자를 가진 파일만 선택
+
+두 번째 필터: 7일이 지난 파일만 선택
+
+resourceValues: 파일의 메타데이터(생성 날짜 등) 정보를 가져옴
+
+## 2. Wine 프로세스 종료 기능 (killBottles)WhiskyApp.swift6/14- BottleVM: Bottle View Model의 약자로, Wine 컨테이너(bottle) 관리를 담당
+
+shared.bottles: 현재 시스템에 설치된 모든 Wine 컨테이너 목록
+
+각 bottle은 Windows 프로그램을 실행하기 위한 독립된 환경
+
+문제가 발생했을 때 모든 Wine 프로세스를 강제 종료하는 긴급 기능
+
+## 3. 로그 폴더 열기 기능 (openLogsFolder)WhiskyApp.swift7/14- macOS의 Finder에서 로그 폴더를 직접 열어주는 기능
+
+문제 해결이나 디버깅이 필요할 때 로그 파일에 빠르게 접근 가능
+
+NSWorkspace: macOS의 작업 환경을 관리하는 클래스
+
+## 실제 사용 시나리오
+
+일상적인 관리
+
+앱이 실행될 때마다 자동으로 오래된 로그 파일 정리
+
+디스크 공간 자동 관리
+
+문제 해결 시
+
+Windows 프로그램이 응답하지 않을 때 killBottles()로 강제 종료
+
+로그 확인이 필요할 때 openLogsFolder()로 빠른 접근
+
+시스템 최적화
+
+정기적인 로그 정리로 시스템 성능 유지
+
+불필요한 프로세스 정리
+
+이러한 기능들은 Wine을 통한 Windows 프로그램 실행 환경을 안정적으로 유지하는 데 매우 중요한 역할을 합니다. 특히 macOS에서 Windows 프로그램을 실행할 때 발생할 수 있는 여러 문제들을 효과적으로 관리할 수 있게 해줍니다.
+
+Checkpoint 2 saved.checkout
+
+WhiskyApp.swift
+
+아니 코드 블럭이 보이게 해줘
+
+# Sparkle 모듈 관련 오류 해결
+
+현재 코드에서 Sparkle 모듈을 찾을 수 없다는 오류가 발생했습니다. 먼저 관련 코드를 살펴보겠습니다:
+
+WhiskyApp.swift
+
+8/14
+
+## 오류의 원인
+
+Sparkle은 macOS 애플리케이션의 자동 업데이트를 처리하는 프레임워크입니다. 이 오류는 다음과 같은 이유로 발생할 수 있습니다:
+
+Sparkle 패키지가 프로젝트에 추가되지 않음
+
+Package.swift에 의존성이 올바르게 정의되지 않음
+
+빌드 설정에서 Sparkle 프레임워크가 올바르게 링크되지 않음
+
+## 해결 방법
+
+Package.swift 파일에 Sparkle 의존성을 추가해야 합니다:
+
+Package.swift
+
+1/1
+
+또는 Xcode에서 직접 추가하는 방법:
+
+Xcode 프로젝트 내비게이터에서 프로젝트 선택
+
+File > Add Packages... 메뉴 선택
+
+검색창에 https://github.com/sparkle-project/Sparkle 입력
+
+버전 선택 후 Add Package 클릭
+
+이렇게 하면 "No such module 'Sparkle'" 오류가 해결될 것입니다.
+
+## Sparkle이 하는 일
+
+앱의 자동 업데이트 기능 제공
+
+업데이트 확인 및 다운로드
+
+새 버전 설치 프로세스 관리
+
+사용자에게 업데이트 알림 표시
+
+이 코드에서는 SPUStandardUpdaterController를 사용하여 업데이트 기능을 초기화하고 관리합니다.
+
+Checkpoint 3 saved.checkout
+
+WhiskyApp.swift
+
+WhiskyApp.swift (168-191)
+
+이제 여기 설명
+
+# Wine 쉐이더 캐시 정리 기능 상세 분석WhiskyApp.swift9/14
+
+## 1. 시스템 캐시 디렉토리 찾기
+
+getconf: macOS의 시스템 설정값을 읽어오는 명령어
+
+DARWIN_USER_CACHE_DIR: 사용자별 캐시 디렉토리 경로를 가져오는 명령어
+
+Process(): 외부 프로그램을 실행하기 위한 Swift의 클래스
+
+Pipe(): 프로그램의 출력을 받아오기 위한 파이프 생성
+
+## 2. 캐시 데이터 읽기 및 처리WhiskyApp.swift10/14
+
+fileHandleForReading: 프로그램 출력을 읽기 위한 파일 핸들
+
+d3dm: DirectX 쉐이더 캐시가 저장되는 디렉토리
+
+trimmingCharacters: 경로 문자열의 앞뒤 공백 제거
+
+## 3. 캐시 삭제WhiskyApp.swift11/14
+
+FileManager: 파일 시스템 작업을 담당하는 클래스
+
+removeItem: 지정된 경로의 파일/디렉토리 삭제
+
+## 실제 사용 사례
+
+성능 문제 해결
+
+게임이나 그래픽 앱에서 화면 깨짐 현상 발생 시
+
+그래픽 성능이 저하될 때
+
+DirectX 관련 오류 발생 시
+
+디스크 공간 확보
+
+불필요한 쉐이더 캐시 제거
+
+시스템 최적화
+
+문제 해결 절차
+
+Wine 프로세스 종료 (killBottles() 실행)
+
+쉐이더 캐시 삭제
+
+프로그램 재실행
+
+이 기능은 특히 게임이나 그래픽 집약적인 Windows 프로그램을 실행할 때 발생하는 문제들을 해결하는 데 매우 유용합니다.
+
+Checkpoint 4 saved.checkout
+
+WhiskyApp.swift
+
+좀 더 자세히 설명하듯이
+
+# macOS용 Wine 관리 앱의 핵심 기능 살펴보기
+
+안녕하세요! 오늘은 macOS에서 Windows 프로그램을 실행할 수 있게 해주는 Wine 관리 앱의 핵심 기능들을 자세히 살펴보겠습니다.
+
+## 1. 로그 관리 시스템 (deleteOldLogs)
+
+Wine을 사용하다 보면 수많은 로그 파일이 쌓이게 됩니다. 이 앱은 이러한 로그들을 똑똑하게 관리해줍니다.
+
+WhiskyApp.swift
+
+12/14
+
+### 작동 방식
+
+먼저 7일 전 날짜를 계산합니다
+
+-7 * 24 * 60 * 60는 7일을 초 단위로 환산한 것입니다
+
+7일(7) × 24시간 × 60분 × 60초
+
+로그 파일 필터링
+
+let logs = urls.filter { url in
+
+  url.pathExtension == "log" // .log 확장자를 가진 파일만 선택
+
 }
-```
 
- @MainActor static let shared = BottleVM()
+모든 파일 중에서 .log 확장자를 가진 파일만 골라냅니다
 
-@MainActor: 메인 스레드에서만 접근 가능하도록 보장
+다른 중요한 파일들은 건드리지 않아 안전합니다
 
-static let: 싱글톤 패턴을 구현하기 위한 정적 상수
+오래된 파일 찾기
 
-shared: 공유 인스턴스
+let oldLogs = logs.filter { url in
 
-@Published var bottles: [Bottle] = []
+  do {
 
-병 목록을 저장하는 배열
+​    let resourceValues = try url.resourceValues(forKeys: [.creationDateKey])
 
-@Published로 표시되어 변경사항을 UI에 자동으로 반영
+​    return resourceValues.creationDate ?? Date() < pastDate
 
-이런식으로, bottleVM에 저장되있고, 이걸 싱글톤으로 정의하여서 데이터를 공유하여 bottle이라는 개념으로 같이 관리를 한다.
+  } catch {
 
-여기서 bottle이란 wine에서 윈도우의 환경설정들을 담은 하나의 환경변수모음?같은거, 도커랑 비슷한거인듯하다.
+​    return false
 
+  }
 
-
-```swift
-.onAppear {
-    NSWindow.allowsAutomaticWindowTabbing = false
-
-    Task.detached {
-        await WhiskyApp.deleteOldLogs()
-    }
 }
-```
 
-### NSWindow.allowsAutomaticWindowTabbing = false 
+\- 각 로그 파일의 생성 날짜를 확인합니다
 
-## macOS의 자동 창 탭 기능을 비활성화
+7일이 지난 파일만 삭제 대상으로 선정합니다
 
-여러 창을 하나의 탭으로 합치는 기능을 끔
+## 2. Wine 프로세스 관리 (killBottles)
 
-### Task.detached: 백그라운드에서 실행될 작업을 정의
+Windows 프로그램이 응답하지 않을 때 사용하는 긴급 중지 기능입니다.
 
-await: 비동기 작업이 완료될 때까지 기다림
+WhiskyApp.swift
 
-비동기란? 다른 작업이 완료될 때까지 기다리지 않고 다음 작업을 실행하는 방식
+13/14
 
-deleteOldLogs(): 오래된 로그 파일들을 정리하는 함수
+### 상세 설명
 
-## 정리
+bottle은 Wine에서 Windows 프로그램을 실행하는 독립된 환경입니다
 
-이 코드는 앱이 시작될 때:
+마치 가상의 Windows PC를 여러 개 운영하는 것과 비슷합니다
 
-기본 창을 생성하고
+문제가 생겼을 때 이 기능으로 모든 프로세스를 안전하게 종료할 수 있습니다
 
-창의 크기를 설정하며
+## 3. 쉐이더 캐시 관리 (wipeShaderCaches)
 
-데이터 관리자를 설정하고
+게임이나 그래픽 프로그램의 성능 향상을 위해 저장되는 쉐이더 캐시를 관리합니다.
 
-창 탭 기능을 끄고
+WhiskyApp.swift
 
-백그라운드에서 로그 정리를 수행
+14/14
 
-하는 기본적인 앱 초기화 작업을 담당
+### 캐시 삭제가 필요한 상황
+
+게임에서 그래픽 깨짐 현상이 발생할 때
+
+프로그램의 성능이 이유 없이 저하될 때
+
+DirectX 관련 오류가 발생할 때
+
+### 작동 순서
+
+macOS의 캐시 디렉토리 위치를 확인
+
+DirectX 쉐이더 캐시 폴더(d3dm)를 찾음
+
+해당 폴더의 내용을 안전하게 삭제
+
+## 실제 사용 시나리오
+
+### 1. 일상적인 사용
+
+앱이 실행될 때마다 자동으로 오래된 로그 정리
+
+디스크 공간 자동 관리
+
+시스템 성능 최적화 유지
+
+### 2. 문제 해결 시
+
+1. Windows 프로그램이 멈췄을 때:
+
+killBottles() 실행으로 프로세스 종료
+
+프로그램 재시작
+
+게임 성능 문제 발생 시:
+
+wipeShaderCaches() 실행
+
+쉐이더 캐시 초기화
+
+게임 재실행
+
+로그 확인이 필요할 때:
+
+openLogsFolder() 사용
+
+최근 7일간의 로그만 깔끔하게 정리되어 있음
+
+
+
