--- a/_posts/2024-11-20-swift 공부.md
+++ b/_posts/2024-11-20-swift 공부.md
@@ -1,6 +1,6 @@
 ---
 key:
-title: 'whisky 코드를 파헤쳐서 swift를 공부해보자-2'
+title: 'whisky 코드를 파헤쳐서 swift를 공부-2'
 excerpt: 'swift 정리합니다.'
 tags: [swift]
 ---
