자바스크립트 포스팅 삭제

--- a/_posts/2024-11-22-swift 기본 문법.md
+++ b/_posts/2024-11-22-swift 기본 문법.md
@@ -1,6 +1,6 @@
 ---
 key:
-title: 'swift 기본 문법 공부'
+title: 'swift 기본 문법 공부, enum,struct,class,optional,property observer, 제네릭'
 excerpt: 'swift 정리합니다.'
 tags: [swift]
 ---
