--- a/_posts/2024-12-29-생성 모델링 확률 이론 공부.md
+++ b/_posts/2024-12-29-생성 모델링 확률 이론 공부.md
@@ -9,7 +9,7 @@ tags: [확률이론]
 
 확률 밀도 함수란 어떠한 X집합(X = x1,x2,x3...)이 있을 떄, 0과 1 사이의 숫자로 매핑하는 함수 P(x), 표본 공간에 있는 모든 포안트에 대해 밀도 함수를 적분 했을 떄 1이 되어야 한다.
 
-이 떄 관측 데이터 셋을 생성한 실제 밀도 함수 $P_{data}$ 는 하나지만, 이 밀도 함수를 추정하는데 사용할 수 있는 밀도 함수 $P_{model}$는 무수히 많다, 즉 실제 밀도 함수를 구하는게 모델링 입장에선 베스트겠지만, 불가능 하기 떄문에 저 함수를 추정하는 밀도 함수 $P_{model}$ 중에서 가장 원본과 가까운 함수를 구하고자, 관측 데이터 셋에 가장 가깝게 찍어 내는 모델 함수를 구하고자 하는거다.
+이 떄 관측 데이터 셋을 생성한 실제 밀도 함수 $P_{data}(x)$ 는 하나지만, 이 밀도 함수를 추정하는데 사용할 수 있는 밀도 함수 $P_{model}(x)$는 무수히 많다, 즉 실제 밀도 함수를 구하는게 모델링 입장에선 베스트겠지만, 불가능 하기 떄문에 저 함수를 추정하는 밀도 함수 $P_{model}(x)$ 중에서 가장 원본과 가까운 함수를 구하고자, 관측 데이터 셋에 가장 가깝게 찍어 내는 모델 함수를 구하고자 하는거다.
 
 ```python
 import numpy as np
@@ -67,8 +67,6 @@ plt.legend()
 plt.grid(True)
 plt.show()
 ```
-
-![image-20241229175130804](/Users/kirity/Library/Application Support/typora-user-images/image-20241229175130804.png)
 
 ## 모수 모델링
 
@@ -163,9 +161,9 @@ for key, value in fit_results.items():
     print(f"{key}: {value}")
 ```
 
-![image-20241229180319849](/Users/kirity/Library/Application Support/typora-user-images/image-20241229180319849.png)
-
-![image-20241229180332065](/Users/kirity/Library/Application Support/typora-user-images/image-20241229180332065.png)
-
 물론 그런다고 정확하게 예측되는게 아니기 떄문에, 저렇게 데이터가 예측이랑 빗나가는 경우도 있다. 그래서 비모수적으로 하는 방법도 있는 듯 하다.
+
+## 가능도
+
+파라미터 집합 $\theta$ 의 가능도는 $L($\theta$ | x)$ 는 관측된 포이트 x가 주어졌을 떄 $\theta$의 타당성을 측정하는 함수이다.
 
