--- a/_posts/2024-12-29-생성 모델링 확률 이론 공부.md
+++ b/_posts/2024-12-29-생성 모델링 확률 이론 공부.md
@@ -165,5 +165,126 @@ for key, value in fit_results.items():
 
 ## 가능도
 
-파라미터 집합 $\theta$ 의 가능도는 $L($\theta$ | x)$ 는 관측된 포이트 x가 주어졌을 떄 $\theta$의 타당성을 측정하는 함수이다.
+파라미터 집합 $\theta$ 의 가능도는 $L($\theta$ | x)$ 는 관측된 포인트 x가 주어졌을 떄 $\theta$의 타당성을 측정하는 함수이다.
+$$
+L(\theta | x) = P_\theta(x)
+$$
+이렇게 정의 되는데, 대충 "모수가 얼마나 그럴듯 한가"를 측정하는 정도라고 생각하면 될 거 같다, 앞에서 모수 모델링을 구할 떄 쓰이는거라고 생각하면 될 거 같다. 즉 **주어진 관측값이 특정 확률분포로부터 나왔을 확률 (= 연속확률밀도함수의 y 값)** 으로 어떤 값이 관측되었을 때, 해당 관측값이 어떤 확률분포로부터 나왔는지에 대한 확률이다. 확률의 반대 개념으로 고정되는 요소가 관측값 x이고 그걸 통해 확률분포가 여기서 나왔을 확률을 구하는, 이름 그대로 이런 값이 나오는게 어느정도로 가능해? 이런 느낌인거 같다. 그러므로 저 위의 개념이랑 합치면 확률밀도 함수를 구성하는 파라미터 $\theta$도 그런 의미에서 관측 포인트 x에 따라 구해지는 값이 되는거다. **가능도라는건 포인트집합들을 가지고 어떤 밀도함수가 어느정도 확률이 있을지에 대해 논하는거** 
+
+그러므로 모수 모델링은 데이터셋 X가 관측 될 가능도를 최대화하는 파라미터 $\hat{\theta}$ 의 최적값을 구하는 것이다.
+
+## 최대 가능도 추정
+
+그렇다면 그 $\hat{\theta}$ 를 구하는 기법이 최대 가능도 추정인데, 여기서 $\hat{\theta}$는 관측된 데이터 X를 가장 잘 설명하는 밀도 함수의 파라미터 집합이다, 
+$$
+\hat{\theta} = \arg\max_{\theta} L(\theta|x)
+$$
+신경망은 손실 함수를 최소화하는 방향으로 파라미터들을 경사하강법으로 보통 업데이트 하기에, 음의 로그 가능도를 최소화하는 방향으로 피라미터 집합을 찾는 거라고 생각 할 수 있다,
+$$
+\hat{\theta} = \arg\min_{\theta} -\log L(\theta|x)
+$$
+여기서 파라미터가 모델에 담긴 신경망의 가중치이다. 즉 주어진 데이터를 관측할 가능도를. 최대화하는 (음의 로그 가능도를 최소화하는) 파라미터 값을 찾는 것이다.
+
+```py
+import numpy as np
+from scipy.optimize import minimize
+import matplotlib.pyplot as plt
+
+class MaximumLikelihoodEstimation:
+    def __init__(self, data):
+        self.data = data
+        
+    def negative_log_likelihood(self, params):
+        """
+        음의 로그 가능도 계산
+        params[0]: 평균(mu)
+        params[1]: 표준편차(sigma)
+        """
+        mu, sigma = params
+        
+        # 정규분포의 로그 가능도
+        log_likelihood = np.sum(
+            -0.5 * np.log(2 * np.pi) 
+            - np.log(sigma) 
+            - 0.5 * ((self.data - mu) / sigma) ** 2
+        )
+        
+        return -log_likelihood  # 최소화를 위해 음수 취함
+    
+    def fit(self):
+        """
+        최대 가능도 추정 수행
+        """
+        # 초기값 설정
+        initial_guess = [np.mean(self.data), np.std(self.data)]
+        
+        # 최적화 수행
+        result = minimize(
+            self.negative_log_likelihood,
+            initial_guess,
+            method='Nelder-Mead'
+        )
+        
+        return result.x
+    
+    def plot_likelihood_surface(self):
+        """
+        가능도 표면 시각화
+        """
+        mu_range = np.linspace(np.mean(self.data) - 2, np.mean(self.data) + 2, 100)
+        sigma_range = np.linspace(np.std(self.data) * 0.5, np.std(self.data) * 1.5, 100)
+        
+        mu_grid, sigma_grid = np.meshgrid(mu_range, sigma_range)
+        nll_grid = np.zeros_like(mu_grid)
+        
+        for i in range(len(mu_range)):
+            for j in range(len(sigma_range)):
+                nll_grid[j,i] = self.negative_log_likelihood([mu_grid[j,i], sigma_grid[j,i]])
+        
+        plt.figure(figsize=(12, 8))
+        plt.contour(mu_grid, sigma_grid, nll_grid, levels=50)
+        plt.colorbar(label='Negative Log-Likelihood')
+        plt.xlabel('μ (mean)')
+        plt.ylabel('σ (standard deviation)')
+        plt.title('Negative Log-Likelihood Surface')
+        
+        # 최적값 표시
+        mle_params = self.fit()
+        plt.plot(mle_params[0], mle_params[1], 'r*', markersize=15, label='MLE')
+        plt.legend()
+        plt.show()
+
+# 예제 데이터 생성
+np.random.seed(42)
+true_mean = 2.0
+true_std = 1.5
+sample_size = 1000
+data = np.random.normal(true_mean, true_std, sample_size)
+
+# MLE 수행
+mle = MaximumLikelihoodEstimation(data)
+estimated_params = mle.fit()
+
+print(f"실제 파라미터: 평균={true_mean}, 표준편차={true_std}")
+print(f"추정된 파라미터: 평균={estimated_params[0]:.3f}, 표준편차={estimated_params[1]:.3f}")
+
+# 결과 시각화
+plt.figure(figsize=(12, 6))
+plt.hist(data, bins=50, density=True, alpha=0.7, label='Data')
+x = np.linspace(min(data), max(data), 100)
+plt.plot(x, 1/(estimated_params[1]*np.sqrt(2*np.pi)) * 
+         np.exp(-0.5*((x-estimated_params[0])/estimated_params[1])**2),
+         'r-', label='Estimated Distribution')
+plt.xlabel('Value')
+plt.ylabel('Density')
+plt.title('Data and Estimated Distribution')
+plt.legend()
+plt.grid(True)
+plt.show()
+
+# 가능도 표면 시각화
+mle.plot_likelihood_surface()
+```
+
+물론 고차원 문제에서 $P_{\theta}(x)$ 를 직접 계산하는건 매우 어렵기 때문에 다른 우회적인 방법들로 구한다.
 
