--- a/_posts/2024-12-29-생성 모델링 확률 이론 공부.md
+++ b/_posts/2024-12-29-생성 모델링 확률 이론 공부.md
@@ -288,3 +288,5 @@ mle.plot_likelihood_surface()
 
 물론 고차원 문제에서 $P_{\theta}(x)$ 를 직접 계산하는건 매우 어렵기 때문에 다른 우회적인 방법들로 구한다.
 
+![image-20250101190156137](/Users/kirity/Library/Application Support/typora-user-images/image-20250101190156137.png)
+
