--- a/_posts/2024-12-30-생성 모델링 이론.md
+++ b/_posts/2024-12-30-생성 모델링 이론.md
@@ -41,3 +41,22 @@ tags: [AE]
 
 잠재공간과 임베딩(최적화된 벡터)을 시각화해본 모습인데, 여기서 빨간색은 0 이런식으로 9까지 분류를 해 놓은 모습인데, 오토 인코더는 레이블을 따로 구별을 안해줘도 어차피 인코딩 하는 과정에서 자기가 스스로 잠재공간에서의 위치를 정하기 떄문에, 자동적으로 저렇게 비슷한 데이터들끼리 위치가 모인다. 즉 답을 주지 않고 스스로 학습하게 하는 **비지도 학습**을 하게 된다.
 
+## 요약
+
+### 정보 보존:
+
+중요한 특성은 유지
+
+불필요한 정보는 제거
+
+### 매니폴드 학습:
+
+데이터의 본질적 구조 파악
+
+효율적인 저차원 표현 학습
+
+#### 고차원 데이터의 중요 특성을 포착하고
+
+#### 효율적인 저차원 표현을 학습하는
+
+#### 정보 압축 과정!
