--- a/_posts/2024-12-30-생성 모델링 이론.md
+++ b/_posts/2024-12-30-생성 모델링 이론.md
@@ -33,7 +33,9 @@ tags: [AE]
 
 그렇다면 이 잠재공간은 앞에 말했듯이 두개의 숫자, 즉 (2D 벡터)로 표현이 가능하다, 신경망을 이용해서 인코더는 디코더가 정확하게 다시 원래 이미지에 가깝게 재구성할 수 있도록 가능한 한 많은 정보를 내포시키려 하기 때문에, 이 벡터(여기서는 2차원 이므로 포인트)를 임베딩이라고 한다. 그리고 그 위치가 1이라는 숫자의 잠재공간에서의 위치가 되겠다.
 
-다시 돌아와서, 결국 앞에 말했던 정보를 최소화한다라는 말은 **입력이미지에서 차원을 낮춰가면서 특징을 포착해낸다** 라는 특성과 맞닿아 있음을 말한다. 그리고 특징을 포착해낸 모든 벡터(임베딩)들을 모아놓은 잠재공간에서 역으로 그 공간에서 벡터를 선택해 **이미지를 생성함도 가능**하다는 것이다.
+![img](https://velog.velcdn.com/images/alwls5773/post/669a13df-7eb8-40b7-899a-f730d809897c/image.png)
+
+다시 돌아와서, 결국 앞에 말했던 정보를 최소화한다라는 말은 **입력이미지에서 차원을 낮춰가면서 특징을 포착해낸다** 라는 특성과 맞닿아 있음을 말한다. 그리고 특징을 포착해낸 모든 벡터(임베딩)들을 모아놓은 잠재공간에서 역으로 그 공간에서 벡터를 선택해 **이미지를 생성함(샘플링)도 가능**하다는 것이다.
 
 입력 데이터인 784개의 뉴런들을 500개, 300개, 2개로 압축시킴으로써 입력 데이터의 대표적인 특성을 추출한다. 그리고 이를 기반으로 다시 대칭적인 구조로 300개, 500개 뉴런으로 확장시킨 후 최종적으로 입력 데이터와 똑같은 사이즈인 784개의 뉴런 개수로 최종 값을 출력시킨다. 이러한 구조들로 보통 만들어 진다고 한다.
 
